--- a/room-rover/src/Components/About/About.css
+++ b/room-rover/src/Components/About/About.css
@@ -30,11 +30,13 @@
 
 
 .right-about {
-  flex-basis: 30%;
+  flex-basis: 32%;
 }
 .parahead {
   font-size: 18px;
   font-weight: 600;
+  text-align: justify;
+  text-justify: inter-word;
  
 }
 
