--- a/room-rover/src/Components/Dashboard/Dashboard.css
+++ b/room-rover/src/Components/Dashboard/Dashboard.css
@@ -31,9 +31,45 @@
   backdrop-filter: blur(10px);
 }
 
-.dropdow {
+.dashboard {
+  position: relative;
+  left: 5px;
+  background-color: white;
+}
+
+legend {
+  border-bottom: 0px !important;
+  width: auto !important;
+  text-transform: uppercase;
+  font-size: 21px;
+  padding-right: 15px;
+  color: #063566;
+  font-weight: 600;
   position: absolute;
-  bottom: 2px;
-  right: 3px;
-  z-index: 2;
+  top: 30px;
+  left: 45px;
+}
+
+.lakeer {
+  position: absolute;
+  top: 46px;
+  left: 189px;
+  width: 54vw;
+  border: 2px solid #0c54a3 !important;
+  border-bottom: 0px;
+  border-left: 0px !important;
+  border-right: 0px !important;
+  border-bottom: 0px !important;
+  padding: 0px !important;
+  margin: 0 2px !important;
+}
+
+headinv {
+  text-transform: uppercase;
+  font-size: 21px;
+  font-weight: 600;
+  position: absolute;
+  left: 32%;
+  top: 15px;
+  color: #063566;
 }
