--- a/room-rover/src/Components/Navbar/Navbar.css
+++ b/room-rover/src/Components/Navbar/Navbar.css
@@ -108,3 +108,41 @@ nav-head ul li a:hover::after {
   height: 10px;
   font-size: 18px;
 }
+
+.nvbar-drop {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-list {
+  list-style: none;
+  padding: 0;
+  margin: 5px;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  background-color: #fff; /* Add a background color if desired */
+  border: 1px solid #ccc; /* Add a border if desired */
+  z-index: 2;
+  width: 150px;
+}
+
+nav-head ul {
+  height: 200px;
+}
+
+ul li{
+  margin: 16px 30px;
+}
+
+.dropdown-list li {
+  border-bottom: 1px solid #ccc; /* Add a border between items if desired */
+  z-index: 2;
+}
+
+
+.buton{
+  margin: 0;
+}
