--- a/room-rover/src/Components/Dashboard/Dashboard.css
+++ b/room-rover/src/Components/Dashboard/Dashboard.css
@@ -74,15 +74,48 @@ headinv {
   color: #063566;
 }
 
-
-.map{
+.map {
   position: absolute;
   right: 25px;
   top: 220px;
 
   height: 350px;
   width: 30%;
-background-image: url('E:\FinalYearProject\room-rover\Images\khi_map2.gif');
+  background-image: url("E:\FinalYearProject\room-rover\Images\khi_map2.gif");
 }
 
+.search-barr {
+  margin-left: 140%;
+  margin-top: 2px;
+  position: relative;
+}
+.search-barr .icon-1 {
+  position: absolute;
+  top: 63%;
+  left: 10px;
+  transform: translateY(-50%);
+  height: 10px;
+  font-size: 18px;
+}
 
+.search-barr .input-text-2 {
+  width: 400px;
+  height: 5vh;
+  border: none;
+  background-color: #b0abab65;
+  padding: 10px 10px 10px 35px;
+  border-radius: 8px;
+  /* -webkit-transition: width 0.4s ease-in-out;
+  transition: width 0.4s ease-in-out; */
+}
+.search-barr .input-text:focus {
+  background-color: #ccc;
+}
+.search-barr .icon2-2 {
+  position: absolute;
+  top: 65%;
+  left: 120%;
+  transform: translateY(-50%);
+  height: 10px;
+  font-size: 18px;
+}
