--- a/room-rover/src/Components/Navbar/Navbar.css
+++ b/room-rover/src/Components/Navbar/Navbar.css
@@ -79,36 +79,6 @@ nav-head ul li a:hover::after {
 .active {
   color: #00ed64;
 }
-/* .search-bar .icon-1 {
-  position: absolute;
-  top: 63%;
-  left: 10px;
-  transform: translateY(-50%);
-  height: 10px;
-  font-size: 18px;
-}
-
-.search-bar .input-text-2 {
-  width: 400px;
-  height: 5vh;
-  border: none;
-  background-color: #fff;
-  padding: 8px 8px 8px 35px;
-  -webkit-transition: width 0.4s ease-in-out;
-  transition: width 0.4s ease-in-out;
-}
-.search-bar .input-text:focus {
-  background-color: #ccc;
-}
-.search-bar .icon2-2 {
-  position: absolute;
-  top: 65%;
-  left: 95%;
-  transform: translateY(-50%);
-  height: 10px;
-  font-size: 18px;
-  
-} */
 
 .nvbar-drop {
   position: relative;
@@ -124,8 +94,8 @@ nav-head ul li a:hover::after {
   left: 0;
   display: flex;
   flex-direction: column;
-  background-color: #fff; /* Add a background color if desired */
-  border: 1px solid #ccc; /* Add a border if desired */
+  background-color: #fff; 
+  border: 1px solid #ccc; 
   z-index: 2;
   width: 150px;
 }
@@ -139,7 +109,7 @@ ul li{
 }
 
 .dropdown-list li {
-  border-bottom: 1px solid #ccc; /* Add a border between items if desired */
+  border-bottom: 1px solid #ccc; 
   z-index: 2;
 }
 
