--- a/room-rover/src/Components/OwnerSide/Agreement/Agreement.css
+++ b/room-rover/src/Components/OwnerSide/Agreement/Agreement.css
@@ -36,7 +36,7 @@ hr {
   background-color: white;
   border-style: none;
   border-top-style: dotted;
-  border-color: grey;
+  border-color:black;
   border-width: 5px;
-  width: 5%;
+  width: 10%;
 }
