--- a/room-rover/src/Components/Navbar/Navbar.css
+++ b/room-rover/src/Components/Navbar/Navbar.css
@@ -94,8 +94,8 @@ nav-head ul li a:hover::after {
   left: 0;
   display: flex;
   flex-direction: column;
-  background-color: #fff; 
-  border: 1px solid #ccc; 
+  background-color: #fff;
+  border: 1px solid #ccc;
   z-index: 2;
   width: 150px;
 }
@@ -104,16 +104,55 @@ nav-head ul {
   height: 200px;
 }
 
-ul li{
+ul li {
   margin: 16px 30px;
 }
 
 .dropdown-list li {
-  border-bottom: 1px solid #ccc; 
+  border-bottom: 1px solid #ccc;
   z-index: 2;
 }
 
-
-.buton{
+.buton {
   margin: 0;
+}
+
+/* --------------------------------css for small scree-------------------------------- */
+.right-text .fas {
+  display: none;
+}
+
+@media only screen and (max-width: 600px) {
+  .right-text .fas {
+    display: block;
+    font-size: 25px;
+  }
+
+  .right-text .openbtn {
+    margin-left: 20px;
+    margin-top: 20px;
+  }
+
+  .right-text ul {
+    background-color: #ff004f;
+    position: fixed;
+    top: 0;
+    right: -170px;
+    width: 170px;
+    height: 100vh;
+    padding-top: 50px;
+    z-index: 2;
+  }
+
+  .right-text ul,
+  li {
+    display: block;
+  }
+
+  .right-text ul .fas {
+    position: absolute;
+    top: 25px;
+    left: 25px;
+    cursor: pointer;
+  }
 }
