--- a/room-rover/src/Components/OwnerSide/Post/post.css
+++ b/room-rover/src/Components/OwnerSide/Post/post.css
@@ -1,15 +1,41 @@
 .dropdow {
+  position: absolute;
+  top: 2px;
+  left: 3px;
+  z-index: 2;
+}
+
+.post-head {
+  display: flex;
+  justify-content: center;
+  margin-top: 5px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+@media only screen and (max-width: 600px) {
+  .grid-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 16px; /* Adjust the gap according to your preference */
+  }
+
+  .btn-media {
+    width: 40vw;
+    margin-left: 20px;
+  }
+
+  .toggle-media {
+    width: 50px;
+    margin-left: 5px;
+  }
+
+  .btn-details-mdeia {
+    width: 50%;
+    margin-left: 65px;
+  }
+
+  .lakeer {
+    width: 190px;
     position: absolute;
-    top: 2px;
-    left: 3px;
-    z-index: 2;
+    left: 152px;
   }
-
-
-  .post-head{
-    display: flex;
-    justify-content: center;
-    margin-top: 5px;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  }
-  
+}
