--- a/room-rover/src/Components/BookingDetails/TermsAndCondition/Terms.css
+++ b/room-rover/src/Components/BookingDetails/TermsAndCondition/Terms.css
@@ -16,7 +16,7 @@
 
 .terms {
   margin-bottom: 30px;
-  font-size: 16px;
+  font-size: 15px;
   line-height: 1.6;
   color: #666;
   text-indent: 0;
@@ -36,7 +36,8 @@
   width: 10px;
   height: 10px;
   border-radius: 50%;
-  background-color: #007bff;
+  /* background-color: #007bff; */
+  background-color: black;
 }
 
 .checkbox {
@@ -71,4 +72,46 @@ button {
 
 button:hover {
   background-color: #0056b3;
+}
+.modal-overlay-term {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modal-content-term {
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  width: 80%;
+  max-width: 600px;
+  max-height: 80%;
+  overflow-y: auto;
+}
+
+.terms-and-conditions {
+  padding: 20px;
+}
+
+.terms {
+  margin-bottom: 20px;
+}
+
+.checkbox {
+  margin-bottom: 20px;
+}
+
+.close-button {
+  background: none;
+  border: none;
+  font-size: 20px;
+  cursor: pointer;
+  background-color: red;
 }
