--- a/room-rover/src/Components/Details/Detail.css
+++ b/room-rover/src/Components/Details/Detail.css
@@ -338,9 +338,9 @@
     font-optical-sizing: auto;
     font-style: normal;
     display: inline-block;
-    width: 80vw;
+    width: 100vw;
     position: absolute;
-    top: 22%;
+    top: 24%;
     left: 23px;
   }
 
@@ -422,5 +422,10 @@
 
   #bottom-side {
     width: 100%;
+  }
+  .amenities-columns {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 5px;
   }
 }
